chore: upadted to constructor dependency injection